--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -72,7 +72,7 @@ body {
     font-family: Georgia, serif;
     font-size: 20px; /* Default font size for desktop */
     text-align: center;
-    background-image: url('images/background.jpg'); /* Ensure this path is correct */
+    background-image: url('background.jpg'); /* Ensure this path is correct */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
